<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoidance_node</name>
  <version>0.0.1</version>
  <description>Obstacle avoidance package for ROS 2.</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <author>Your Name</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
